--- a/css/project_card.css
+++ b/css/project_card.css
@@ -38,14 +38,26 @@
 
 .project-card .project__name {
     color: white;
-    font-size: 30px;
+    font-size: 2rem;
 }
 
 .project-card .project__description {
     color: white;
-    font-size: 1rem;
 
     height: 110px;
+}
+
+.project-card .project__stack {
+    color: #2861b8;
+    font-size: 1.4rem;
+}
+
+.project-card .project__stack_list li {
+    color: rgb(216, 216, 216);
+    font-weight: 600;
+    text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+             0px 8px 13px rgba(0,0,0,0.1),
+             0px 18px 23px rgba(0,0,0,0.1);
 }
 
 .project-card .project-card-btn {
@@ -56,8 +68,10 @@
 
     transition: all 100ms ease-in-out;
     text-decoration: none;
-    color: black;
+    color: rgb(29, 29, 29);
     cursor: pointer;
+
+    font-weight: 600;
 }
 
 .project-card .project-card-btn:hover {
@@ -65,7 +79,7 @@
     background-color: hsl(216, 67%, 59%);
     border: 2px solid hsl(216, 67%, 59%);
 
-    color: white;
+    color: rgb(48, 48, 48);
 }
 
 .project-modal-details {
