--- a/css/navbar.css
+++ b/css/navbar.css
@@ -68,7 +68,7 @@ nav.scrolled .fab {
 
 nav.scrolled .language-switcher::after {
     font-size: 0.6rem;
-    right: -8px;
+    right: -0.9rem;
 }
 
 .nav-link {
