--- a/css/work_experience_card.css
+++ b/css/work_experience_card.css
@@ -134,3 +134,40 @@
     color: #8892B0;
     font-size: 1.15rem;
 }
+
+/* Magic */
+.work-experience .we-section:nth-child(1) {
+	opacity: 0;
+
+	transition-delay: 50ms;
+	transition-duration: 500ms;
+	transition-property: opacity;
+}
+.work-experience:hover .we-section:nth-child(1) {
+	opacity: 1;
+	transition-delay: 100ms;
+}
+
+.work-experience .we-section:nth-child(2) {
+	opacity: 0;
+
+	transition-delay: 50ms;
+	transition-duration: 500ms;
+	transition-property: opacity;
+}
+.work-experience:hover .we-section:nth-child(2) {
+	opacity: 1;
+	transition-delay: 700ms;
+}
+
+.work-experience .we-section:nth-child(3) {
+	opacity: 0;
+
+	transition-delay: 50ms;
+	transition-duration: 500ms;
+	transition-property: opacity;
+}
+.work-experience:hover .we-section:nth-child(3) {
+	opacity: 1;
+	transition-delay: 1200ms;
+}
