--- a/css/project_card.css
+++ b/css/project_card.css
@@ -1,8 +1,7 @@
 .project-card {
     max-width: 400px;
-
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
+    border-radius: 8px;
+	margin: 12px;
 
     background-color: var(--bgcolor-darkblue);
     box-shadow: rgb(80 78 78 / 50%) 0px 0px 10px;
@@ -49,7 +48,7 @@
 
 .project-card .project__stack {
     color: #2861b8;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
 }
 
 .project-card .project__stack_list li {
@@ -58,6 +57,8 @@
     text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
              0px 8px 13px rgba(0,0,0,0.1),
              0px 18px 23px rgba(0,0,0,0.1);
+
+	font-size: 1.2rem;
 }
 
 .project-card .project-card-btn {
@@ -90,4 +91,10 @@
 
 .project-modal-title {
     font-size: 2rem;
+}
+
+@media only screen and (max-width: 992px) {
+	.project-card {
+		max-width: 500px;
+	}
 }
